fix content-area margin on mobile

--- a/assets/css/sass/_content.scss
+++ b/assets/css/sass/_content.scss
@@ -2,7 +2,9 @@
 	margin: 0;
 	width: 100%;
 	.has-featured-image & {
-		margin-top: 30px;
+		@include susy-media($screen-sm) {
+			margin-top: 30px;
+		}
 	}
 }
 
